k8s/manager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    name: manager
    app: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: manager
        app: manager
    spec:
      containers:
      - image: openremote/manager:latest
        imagePullPolicy: Never
        name: manager
